--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,31 +3,31 @@ name: CI/CD
 on:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
   test-and-report:
     runs-on: ubuntu-latest
     steps:
+      # Получаем код
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Устанавливаем Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
+      # Устанавливаем зависимости
       - name: Install dependencies
         run: npm ci
 
+      # Запускаем тесты
       - name: Run tests
         run: npm test
 
-      - name: Generate HTML report
-        run: |
-          mkdir -p reports/html
-          cp -r reports/html/* reports/html/ || true
-
+      # Публикуем отчёт на GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
@@ -37,6 +37,7 @@ jobs:
           user_name: github-actions
           user_email: github-actions@github.com
 
+      # Отправляем уведомление в Telegram
       - name: Send Telegram Notification
         if: always()
         uses: appleboy/telegram-action@v1.0.1
