--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,5 @@ jobs:
           to: ${{ secrets.TG_CHAT_ID }}
           token: ${{ secrets.TG_BOT_TOKEN }}
           message: |
-            ✅ CI/CD Workflow завершен
+            ✅ CI/CD Workflow завершен.
             Посмотреть отчет: ${{ github.server_url }}/${{ github.repository }}/tree/gh-pages
